--- a/task-1/stylesheet.css
+++ b/task-1/stylesheet.css
@@ -1,3 +1,171 @@
+:root {
+	--color-light-gray: #eaeaea;
+	--color-light-gray-2: #afafaf;
+
+	--color-dark-gray-1: #595D63;
+
+	--color-light-blue: #5391F2;
+
+	--color-white: #fff;
+}
+
+/* GENERAL STYLE*/
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
+}
+
 body {
-	background: tomato;
+	background-color: var(--color-light-gray);
+}
+
+.btn {
+	border: 0;
+}
+
+/* POST SECTION */
+.post-container {
+	background-color: var(--color-white);
+	margin: 2rem auto;
+	max-width: 450px;
+	padding: 1rem;
+}
+
+/* POST HEADER */
+.post-header {
+	display: grid;
+	align-items: center;
+	grid-column-gap: 1rem;
+	grid-template-columns: min-content 1fr min-content;
+	grid-template-rows: repeat(2, min-content);
+	margin-bottom: 1rem;
+}
+
+.user-icon {
+	grid-row: 1 / -1;
+	background-image: url('img/user-logo.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	border-radius: 500rem;
+	grid-column: 1 / 2;
+	height: 1.2rem;
+	padding: 1.2rem;
+	width: 1.2rem;
+}
+
+.header-title {
+	color: var(--color-light-blue);
+	font-size: 1.5rem;
+	font-weight: 600;
+}
+
+.header-text {
+	color: var(--color-light-gray-2);
+}
+
+.dots-icon {
+	grid-row: 1 / -1;
+	align-self: start;
+	background-image: url('img/icon-dots.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	grid-column: -2 / -1;
+	padding: 1.2rem;
+}
+
+.post-text {
+	font-size: 1.3rem;
+	margin-bottom: 1rem;
+}
+
+/* POST BODY */
+.post-body {
+	border: 1px solid var(--color-light-gray);
+	box-shadow: 0 2px 10px 0 rgba(179,179,179,1);
+	display: grid;
+	grid-gap: 1rem;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(4, min-content);
+	margin-bottom: 1rem;
+	padding-bottom: 1rem;
+}
+
+.post-body__img {
+	grid-column: 1 / -1;
+}
+
+.post-body__title {
+	font-size: 2rem;
+	grid-column: 1 / -1;
+	padding: 0 1rem;
+}
+
+.post-body__text {
+	font-size: 1.2rem;
+	grid-column: 1 / -1;
+	padding: 0 1rem;
+}
+
+.post-body__link {
+	align-self: end;
+	color: var(--color-light-gray-2);
+	font-size: 1.2rem;
+	padding: 0 1rem;
+	text-transform: uppercase;
+
+}
+
+.btn--post-body {
+	justify-self: end;
+	background-color: var(--color-light-gray);
+	border-radius: 2px;
+	border: 1px solid var(--color-light-gray-2);
+	color: var(--color-dark-gray-1);
+	font-weight: 600;
+	margin-right: 2rem;
+	padding: 0.3rem 1rem;
+}
+
+/* POST SOCIAL */
+.post-social {
+	display: flex;
+	justify-content: space-between;
+	margin-left: 2rem;
+}
+
+.btn--social {
+	color: var(--color-dark-gray-1);
+  display: flex;
+	font-size: 1.4rem;
+	font-weight: 600;
+	padding: 0;
+}
+
+.btn--social::before {
+	background-repeat: no-repeat;
+	background-size: contain;
+	content: "";
+	display: inline-block;
+  height: 2rem;
+  margin-right: .5rem;
+  width: 2rem;
+}
+
+.btn--like::before {
+	background-image: url('img/icon-like.png');
+}
+
+.btn--comment::before {
+	background-image: url('img/icon-comment.png');
+}
+
+.btn--share::before {
+	background-image: url('img/icon-share.png');
+}
+
+/* COMMENT SECTION */
+.comment {
+	background-color: powderblue;
+	height: 200px;
+	margin: 1rem -1rem -1rem;
 }
